# Easy-Png-Encoder-and-Decoder

./: .clang-format  CMakeLists.txt  README.md
include/: pngcodec_def.h  pngdecoder.h  pngencoder.h
src/: CMakeLists.txt  pngdecoder.cxx  pngencoder.cxx  pngutils.cpp  pngutils.h
test/: CMakeLists.txt  main.cxx
